Adjusting resource panel heights to prevent shifting.

--- a/media/css/lightbox.css
+++ b/media/css/lightbox.css
@@ -187,7 +187,7 @@ input.text {
 }
 
 #lightbox .resources-lightbox-content #education-tab div.group {
-    min-height: 317px;
+    min-height: 319px;
     padding-left: 15px;
 }
 
